ingress/ingress-vhost-wordpress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-wordpress-truongdinhtrong-com
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location /admin {
        allow 172.16.94.1;
        deny all;
      }
spec:
  tls:
  - hosts:
    - wordpress.truongdinhtrong.com
    secretName: wordpress-truongdinhtrong-com-tls
  rules:
  - host: "wordpress.truongdinhtrong.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wordpress-prod
            port:
              number: 80
